--- a/downloads.html
+++ b/downloads.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Download Excel Files</title>
+  <title>Finance Tables</title>
 </head>
 <body>
-  <h1>Download Excel Files</h1>
+  <h1>Finance Tables</h1>
   <ul>
-    <li><a href="styledStocksPercentage.xlsx" download>Download File 1</a></li>
+    <li><a href="styledStocksPercentage.xlsx" download>Stocks & price changes</a></li>
   </ul>
 </body>
 </html>
