--- a/downloads.html
+++ b/downloads.html
@@ -3,12 +3,83 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Finance Tables</title>
+  <title>Finance Page</title>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      margin: 20px;
+    }
+
+    header {
+      text-align: center;
+      padding: 20px;
+      background-color: #3498db;
+      color: white;
+      font-size: 24px;
+    }
+
+    section {
+      margin-top: 20px;
+    }
+
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      margin-top: 20px;
+    }
+
+    th, td {
+      border: 1px solid #dddddd;
+      text-align: left;
+      padding: 8px;
+    }
+
+    th {
+      background-color: #f2f2f2;
+    }
+  </style>
 </head>
 <body>
-  <h1>Finance Tables</h1>
-  <ul>
-    <li><a href="styledStocksPercentage.xlsx" download>Stocks & price changes</a></li>
-  </ul>
+
+  <header>
+    Finance Page
+  </header>
+
+  <section>
+    <h2>Excel Data</h2>
+    <table id="excelTable">
+      <!-- Table content will be dynamically added using JavaScript -->
+    </table>
+  </section>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.2/xlsx.full.min.js"></script>
+  <script>
+    // Replace 'your-excel-file.xlsx' with your actual Excel file path
+    const excelFile = 'styledStocksPercentage.xlsx';
+
+    // Fetch and parse Excel file
+    fetch(excelFile)
+      .then(response => response.arrayBuffer())
+      .then(data => {
+        const workbook = XLSX.read(data, { type: 'array' });
+        const sheetName = workbook.SheetNames[0];
+        const sheet = workbook.Sheets[sheetName];
+        const tableData = XLSX.utils.sheet_to_json(sheet, { header: 1 });
+
+        // Display Excel data as a table
+        const table = document.getElementById('excelTable');
+        table.innerHTML = '';
+        tableData.forEach(rowData => {
+          const row = table.insertRow();
+          rowData.forEach(cellData => {
+            const cell = row.insertCell();
+            cell.textContent = cellData;
+          });
+        });
+      })
+      .catch(error => console.error('Error fetching Excel file:', error));
+  </script>
+
 </body>
 </html>
+
