--- a/downloads.html
+++ b/downloads.html
@@ -46,7 +46,7 @@
   </header>
 
   <section>
-    <h2>Excel Data</h2>
+    <h2>Stocks: price variations over the years</h2>
     <table id="excelTable">
       <!-- Table content will be dynamically added using JavaScript -->
     </table>
@@ -64,22 +64,34 @@
         const workbook = XLSX.read(data, { type: 'array' });
         const sheetName = workbook.SheetNames[0];
         const sheet = workbook.Sheets[sheetName];
-        const tableData = XLSX.utils.sheet_to_json(sheet, { header: 1 });
+        const tableData = XLSX.utils.sheet_to_json(sheet, { header: 1, raw: true, defval: '' });
 
         // Display Excel data as a table
         const table = document.getElementById('excelTable');
         table.innerHTML = '';
-        tableData.forEach(rowData => {
+
+        tableData.forEach((rowData, rowIndex) => {
           const row = table.insertRow();
-          rowData.forEach(cellData => {
+          rowData.forEach((cellData, colIndex) => {
             const cell = row.insertCell();
             cell.textContent = cellData;
+
+            // Preserve background color from Excel file
+            const bgColor = getCellBackground(sheet, XLSX.utils.encode_cell({ r: rowIndex, c: colIndex }));
+            if (bgColor) {
+              cell.style.backgroundColor = bgColor;
+            }
           });
         });
       })
       .catch(error => console.error('Error fetching Excel file:', error));
+
+    // Helper function to get cell background color
+    function getCellBackground(sheet, cellAddress) {
+      const cell = sheet[cellAddress];
+      return cell && cell.s && cell.s.bgColor && cell.s.bgColor.rgb;
+    }
   </script>
 
 </body>
 </html>
-
