working on downloads.html

--- a/downloads.html
+++ b/downloads.html
@@ -55,7 +55,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.2/xlsx.full.min.js"></script>
   <script>
     // Replace 'your-excel-file.xlsx' with your actual Excel file path
-    const excelFile = 'excel-files/your-excel-file.xlsx';
+    const excelFile = 'styledStocksPercentage.xlsx';
 
     // Fetch and parse Excel file
     fetch(excelFile)
